<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_etherium_wallet"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/walletpath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_wallet_name" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_password" />


            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_wallet" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/your_address_will_be_shown_here"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="30dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_node"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/connect_to_etherium_network"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/buttonsconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/connect" />


                <Button
                    android:id="@+id/buttonbalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/balance" />


            </LinearLayout>

            <TextView
                android:id="@+id/text_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/please_check_your_balance"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_etherium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/send_etherium"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ethvalue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/enter_eth_value_to_send" />

            <Button
                android:id="@+id/sendEth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/send" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>